Correct submenu alignment, unfix primary navigation item height, and fix double left borders and margins.

--- a/css/style.css
+++ b/css/style.css
@@ -747,6 +747,7 @@ a#advanced-search.button {
 #primary-nav li {
   list-style-type: none;
   margin: 0 0 -1px -1px;
+  position: relative;
 }
 #primary-nav .navigation {
   position: relative;
@@ -771,7 +772,6 @@ a#advanced-search.button {
   padding: 0.75em 18px;
   background: #fafafa;
   border: 1px solid #ccc;
-  height: 3em;
 }
 #primary-nav a:hover, #primary-nav li.active a {
   background: #fff;
@@ -784,9 +784,7 @@ a#advanced-search.button {
   position: absolute;
   display: block;
   top: 3em;
-  border-left: 1px solid #ccc;
-  left: -1px;
-  margin-top: -1px;
+  margin-top: 1px;
   z-index: 1000;
   -webkit-box-shadow: #cccccc 0 3px 5px;
   -moz-box-shadow: #cccccc 0 3px 5px;
